--- a/ui/static/css/main.css
+++ b/ui/static/css/main.css
@@ -3,6 +3,51 @@
   src: url(fonts/Lora-VariableFont_wght.ttf);
 }
 
-h1 {
+@font-face {
+  font-family: Lora-Italic;
+  src: url(fonts/Lora-Italic-VariableFont_wght.ttf);
+}
+
+body {
   font-family: "Lora";
+  padding: var(--size-fluid-2) var(--size-fluid-5);
+}
+
+.created_time {
+  font-size: var(--font-size-3);
+}
+
+.container {
+  opacity: 0;
+  animation: var(--animation-fade-in) forwards;
+  animation-timing-function: var(--ease-squish-3);
+  animation-duration: 1s;
+}
+
+li {
+  list-style: none;
+  padding: 0;
+  text-transform: capitalize;
+
+  font-size: var(--font-size-3);
+}
+
+li:last-of-type {
+  margin-bottom: var(--size-8);
+}
+h1 {
+  margin-bottom: var(--size-4);
+}
+
+a {
+  padding-top: var(--size-5);
+  font-size: var(--font-size-4);
+  --link: var(--gray-1);
+  --link-visited: var(--gray-1);
+}
+.thankful-for {
+  font-style: italic;
+  margin-top: var(--size-3);
+  margin-bottom: var(--size-4);
+  font-size: var(--font-size-5);
 }
