update singular page

--- a/ui/static/html/[date].page.tmpl
+++ b/ui/static/html/[date].page.tmpl
@@ -19,7 +19,7 @@
   <h1>Thankful</h1>
 
 <div class="container">
-    <p class="created_time">{{.CreatedTime}}</p>
+    <p class="created_time">{{.CreatedDate}}</p>
     <p class="thankful-for">I Was Thankful For</p>
     {{range .Entries}}
     <li>
