--- a/ui/static/css/main.css
+++ b/ui/static/css/main.css
@@ -51,3 +51,20 @@ a {
   margin-bottom: var(--size-4);
   font-size: var(--font-size-5);
 }
+
+.input_container {
+  margin-top: var(--size-4);
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: var(--size-3) 0;
+}
+
+.input_item {
+  display: flex;
+  align-items: center;
+}
+
+.input_item label {
+  width: var(--size-5);
+}
