--- a/ui/static/html/today_not_filled.page.tmpl
+++ b/ui/static/html/today_not_filled.page.tmpl
@@ -31,9 +31,9 @@
   </li>  
   </ul>
 
-  <button>Submit</button>
+  <button class="submit-button">Submit</button>
   </form>
-  <a href="/">Return</a>
+  <a class="date-link"  href="/">Return</a>
     </div>
   </div>
 </body>
