add a date to the today page

--- a/ui/static/html/today_completed.page.tmpl
+++ b/ui/static/html/today_completed.page.tmpl
@@ -14,6 +14,7 @@
   <h1>Thankful</h1>
 
 <div class="container">
+    <p class="created_time">{{.CreatedDate}}</p>
     <p class="thankful-for">Today I Am Thankful For</p>
     {{range .Entries}}
     <li>
